Rewrite device discovery
