# apps/elgato/backend/src/modules/device-discovery/dto/discovered-devices-response.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger'
+
+import { DiscoveredDeviceResponseDto } from './discovered-device-response.dto'
+
+export class DiscoveredDevicesResponseDto {
+  @ApiProperty({ type: () => [DiscoveredDeviceResponseDto] })
+  devices: Array<DiscoveredDeviceResponseDto>
+}
