# apps/elgato/backend/src/modules/location/dto/location-response.dto.ts
@@ -1,11 +1,14 @@
 import { ApiProperty } from '@nestjs/swagger'
 import { IsString } from 'class-validator'
 
-export class GroupCreateDto {
+export class LocationResponseDto {
+  @ApiProperty()
+  longitude: number
+
+  @ApiProperty()
+  latitude: number
+
   @ApiProperty()
   @IsString()
   name: string
-
-  @ApiProperty({ required: false, default: false })
-  isRoom: boolean
 }
